# GFlowNetxIDPDesign

./: .gitignore  LICENSE  README.md  create_data.py  environment.yml  file.py  pyproject.toml  run_idp.py  script.sh  test_dataset.py  test_oracle.py
datasets/: cd_dataset.csv  ce_dataset.csv  dataset.tsv  dataset_filtered.csv  de_dataset.csv  de_dataset_scored.csv  generated_data.csv  generated_data_0_10.csv  generated_data_1.csv  generated_data_10_40.csv  generated_data_40_70.csv  generated_data_40_75.csv  generated_data_rgg.csv  results.csv  results_0_10.csv  test.tsv
lib/: args.py  dataset.py  oracle.py  proxy.py  utils.py
lib/data/: analysis.py  dataset.csv  filter.py  test_dataset.csv  train_dataset.csv  train_dataset_2.csv
lib/results/: training_log.json
logs/: generating_log.json  training_log.json  training_log_0_10.json  training_log_10_40.json  training_log_40_70.json  training_log_40_75.json
scripts/: analysis.py  dataset_filter.py  evaluate.py  generate.py  generate_conditional.py  run_idp.py  template_idp_design.py
src/gfnxidp/: __init__.py  args.py  dataset.py  generator.py  oracle.py  proxy.py  tokenizer.py
