[project]
name = "gfnxidp"
version = "0.1.0"
description = "GFlowNet-based IDP design."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas",
    "matplotlib",
    "numba",
    "scikit-learn==1.2.2",
    "MDAnalysis",          
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
